# fileorgx

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  test_analysis_scenarios.py  test_batch.py  test_chromadb_basic.py  test_handlers.py  test_ignore.py  test_llm.py  test_metadata.py  test_ocr_basic.py  test_organizer.py  test_preprocessor.py  test_prompts.py  test_rule_engine.py  test_rule_priority.py  test_rule_suggestor.py  test_scheduler.py  test_semantic_search.py  test_tagger.py  test_taxonomy.py  test_templates.py  test_watcher.py
backend/ai/: analyzer.py  embeddings.py  image_analyzer.py  llm_client.py  ocr_processor.py  prompts.py  rule_suggestor.py
backend/alembic/: env.py
backend/api/: server.py
backend/core/: batch_processor.py  config.py  default_rules.py  learning_logger.py  organizer.py  rule_engine.py  scheduler.py  tagger.py  undo.py  watcher.py
backend/database/: db.py  models.py
backend/scripts/: install_ollama.sh
backend/utils/: cache.py  file_handlers.py  ignore.py  logger.py  metadata.py  taxonomy.py  templates.py
frontend/: README.md  main.js  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: index.css  test_activity_log.tsx  test_animations.tsx  test_dashboard.tsx  test_drop_zone.tsx  test_file_cards.tsx  test_file_preview.tsx  test_notifications.tsx  test_onboarding.tsx  test_rollback_panel.tsx  test_rule_builder.tsx  test_rule_list.tsx  test_search_bar.tsx  test_settings_panel.tsx  test_shortcuts.tsx  (+3 more)
tests/: conftest.py  test_api.py
(+22 files in other folders)
