[tool.poetry]
name = "smart-file-organizer-backend"
version = "0.1.0"
description = "AI-powered file organization backend"
authors = ["Prince Raj <princetheprogrammerbtw@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
watchdog = "^4.0.0"
ollama = "^0.1.6"
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
chromadb = "^0.4.22"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
